mat-ex pages content update and hc3 test pages

--- a/app/views/v6-pcn-decs/mat-ex.html
+++ b/app/views/v6-pcn-decs/mat-ex.html
@@ -26,7 +26,7 @@ Were you pregnant?
    
 
         <span class="nhsuk-caption-m">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">Were you pregnant between the 16 April 2016 and 30 April 2018, or had you given birth in the previous 12 months?</h1>
+        <h1 class="nhsuk-heading-l">Were you pregnant between 18 November 2019 and 30 November 2019, or had you given birth in the previous 12 months?</h1>
         <div class="nhsuk-form-group">
           <form action="maternity-exemption" method="get" class="form">
 
