--- a/app/views/v6-pcn/medical-conditions.html
+++ b/app/views/v6-pcn/medical-conditions.html
@@ -28,7 +28,7 @@ Do you have any of these medical conditions or disabilities?
 
 
     <span class="nhsuk-caption-m">Confirm your entitlement</span>
-    <h1 class="nhsuk-heading-l">Do you have any of these medical conditions or disabilities?</h1>
+    <h1 class="nhsuk-heading-l">Do you have any of these medical conditions?</h1>
     <div class="nhsuk-form-group">
 
       <p>These are the conditions that entitle you to apply for a medical exemption certificate.</p>
