cannot set up DD update

--- a/app/views/v6-pcn/error-messages/cannot-set-up-direct-debit.html
+++ b/app/views/v6-pcn/error-messages/cannot-set-up-direct-debit.html
@@ -20,9 +20,11 @@ We cannot set up your Direct Debit
       
       <p>You'll need to pay in full if you want to pay online.</p>
 ​
-      <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+      <a href="/v6-pcn/payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
         Pay
-      </button>
+      </button></a>
+      
+      
 ​
       <h2 class="nhsuk-heading-m">Pay in installments</h2>
       <p>If you want to pay in installments, you'll need to contact us by:</p>
