medical conditions content amendment

--- a/app/views/v6-pcn-decs/medical-conditions.html
+++ b/app/views/v6-pcn-decs/medical-conditions.html
@@ -45,8 +45,8 @@ Do you have any of these medical conditions or disabilities?
         <li><strong>Diabetes insipidus</strong><br>And other forms of hypopituitarism.</li>
         <li><strong>A continuing physical disability</strong><br>Which means you can't go out without the help of another person.</li>
         <li><strong>Epilepsy</strong><br>If you need continuous anticonvulsive therapy</li>
-        <li><strong>A permanent fistula</strong><br>Which needs continuous surgical dressing or an appliance - for example, caecostomy, colostomy, laryeigostom or ileostomy.</li>
-        <li><strong>Hypoadrenalism</strong><br>Where specific substitution therapy is essential - for example, Addison's Disease.</li>
+        <li><strong>A permanent fistula</strong><br>Which needs continuous surgical dressing or an appliance (for example, caecostomy, colostomy, laryeigostom or ileostomy).</li>
+        <li><strong>Hypoadrenalism</strong><br>Where specific substitution therapy is essential (for example, Addison's Disease).</li>
         <li><strong>Hypoparathyroidism</strong><br>Which means your parathyroid glands produce too little parathyroid hormone.</li>
        
      
