--- a/app/views/v1/check-name.html
+++ b/app/views/v1/check-name.html
@@ -13,20 +13,11 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-        <p class="nhsuk-phase-banner__content">
-          <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-            BETA
-           </strong>
-           <span class="nhsuk-phase-banner__text">
-             This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-          </span>
-         </p>
-       </div>
+
        {{ backLink({
         "href": "/v1/challenge",
         "text": "Back",
-        "classes": "nhsuk-u-margin-top-9 nhsuk-u-margin-bottom-20"
+        "classes": ""
       }) }}
       <form action="/v1/what-is-dob" method="post" class="form">
         <div class="heading-group">
