--- a/app/views/v1/what-happens-next.html
+++ b/app/views/v1/what-happens-next.html
@@ -12,28 +12,14 @@ What happens next
 
 {% block content %}
 <main id="content" role="main">
-  <div class="grid-row">
-     <div class="column-full">
-      <div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-         <p class="nhsuk-phase-banner__content">
-           <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-             BETA
-            </strong>
-            <span class="nhsuk-phase-banner__text">
-              This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-           </span>
-          </p>
-        </div>
-        {{ backLink({
-         "href": "/v1/challenge",
-         "text": "Back",
-         "classes": "nhsuk-u-margin-top-9 nhsuk-u-margin-bottom-20"
-       }) }}
-     </div>
-  </div>
   
   <div class="grid-row">
      <div class="column-two-thirds">
+      {{ backLink({
+         "href": "/v1/challenge",
+         "text": "Back",
+         "classes": ""
+       }) }}
         <div class="heading-group">
          
            <p>Challenge an enquiry letter</p>
