Removed un-necessary inline style on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -46,7 +46,7 @@
  
         <hr>
 
-        <div class="nhsuk-grid-row" style="padding: 25px; width: 800px; margin-left: 70px;">
+        <div class="nhsuk-grid-row">
             <div class="nhsuk-grid-column-one-half">
                 <h4>Postcode Screen Functionality</h3>
             
