--- a/app/views/index.html
+++ b/app/views/index.html
@@ -194,7 +194,7 @@
             </div>
         </div>
  
-        <div class="nhsuk-card">
+        <!-- <div class="nhsuk-card">
             <div class="nhsuk-card__content">
                 <h3 class="nhsuk-card__heading">
                 Surcharge Notice Journey
@@ -210,7 +210,7 @@
                 </a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="nhsuk-card">
             <div class="nhsuk-card__content">
