found hc3 cert adhoc screens updated

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -589,7 +589,7 @@ NHS.UK prototype kit
                         
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/we-found-a-hc3-cert-higher">We found a hc3 cert higher</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-test">We found a hc3 cert higher</a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
@@ -598,7 +598,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/we-found-a-hc3-cert-lower">We found a hc3 cert lower</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower">We found a hc3 cert lower</a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
@@ -607,7 +607,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/we-found-a-hc3-cert-same">We found a hc3 cert same</a></td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same">We found a hc3 cert same</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
                                 </strong></td>
@@ -628,9 +628,7 @@ NHS.UK prototype kit
                                 <a href="v6-pcn-decs/surcharge-penalty-charge-notice">Surcharge Penalty Charge Notice</a>
                             </td>
                             <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag nhsuk-tag--green">
-                                    DECS
-                                </strong>
+                                <strong class="nhsuk-tag">BOTH</strong>
                             </td>
                         </tr>
                     </tbody>
