Updated timeout modal buttons

--- a/app/views/v6-pcn-decs/timeout-redirect-modal.html
+++ b/app/views/v6-pcn-decs/timeout-redirect-modal.html
@@ -13,10 +13,7 @@
       <p class="nhsuk-body tecs-timeout-dialog__message" aria-hidden="true">You are about to be redirected.</p>
       
       <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button" href="enter-reference-number" role="button">
-        Continue application
-      </a>
-      <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button nhsuk-button--secondary" href="respond-to-your-letter" role="button">
-        Restart pay/challenge
+        Continue
       </a>
 
       <div class="tecs-timeout-dialog__link-wrapper"></div></div>
