Fixed timeout scss

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'components/list-border';
 @import 'components/related-nav';
 @import 'components/phase-banner';
+@import 'components/timeout';
 
 ///////////////////////////////////////////
 // Add your custom CSS/Sass styles below...
