--- a/app/views/v6-pcn-decs/session-timeout.html
+++ b/app/views/v6-pcn-decs/session-timeout.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-    You'll need to start again  
+    Your application has timed out - Respond to your letter
 {% endblock %}
 
 {% block outerContent %}
@@ -16,15 +16,17 @@
     <div class="nhsuk-grid-column-two-thirds">
         <span class="nhsuk-caption-m">Pay or challenge an NHS penalty charge</span>
         <h1 class="nhsuk-heading-l">
-            You'll need to start again
+            Your application has timed out
         </h1>
     
         <p>
-            You've been timed out as you stopped using the service for 30 minnutes.
+            We have deleted your answers because you did not do anything for 30 minutes. This is to protect your information.
         </p>
 
+        <p>You'll need to start again.</p>
+
         <a href="respond-to-your-letter" class="nhsuk-button">
-            Pay or challenge now
+            Start again
         </a>
     </div>
 </div>
