PCN locked screen updated

--- a/app/views/v6-pcn/penalty-charge-details-on-hold.html
+++ b/app/views/v6-pcn/penalty-charge-details-on-hold.html
@@ -104,7 +104,7 @@ Penalty Charge Notice details on hold
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total prescription charge
+              Prescription charges
             </dt>
             <dd class="nhsuk-summary-list__value">
               £17.60
@@ -117,7 +117,7 @@ Penalty Charge Notice details on hold
                Penalty Charge 
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £88.00
+              £48.25
             </dd>
 
         
@@ -127,10 +127,10 @@ Penalty Charge Notice details on hold
           
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total amount 
+              Total amount to pay
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £105.60
+              £57.90
             </dd>
 
           </div>
@@ -156,7 +156,7 @@ Penalty Charge Notice details on hold
               Payments made
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £0.00
+              £7.90
             </dd>
 
           </div>
@@ -167,7 +167,7 @@ Penalty Charge Notice details on hold
 
         </dl>
         <p style="font-weight: bold; font-size:36px;">
-         Amount still to pay: £105.60
+         Amount still to pay: £50
 
         </p>
 
@@ -256,7 +256,7 @@ Penalty Charge Notice details on hold
           Exemption reason ticked
         </dt>
         <dd class="nhsuk-summary-list__value">
-          <p>Has a valid prescription prepayment certificate</p>
+          <p>Gets Income Support or income-related Employment and Support Allowance</p>
 
         </dd>
 
@@ -266,7 +266,7 @@ Penalty Charge Notice details on hold
           Date prescription was claimed
         </dt>
         <dd class="nhsuk-summary-list__value">
-         Between 23 October 2022 and 31 October 2022
+         23 October 2022 and 31 October 2022
         </dd>
 
       </div>
@@ -274,7 +274,20 @@ Penalty Charge Notice details on hold
 
     <p>You cannot do anything more to confirm entitlement online at the moment.</p>
     <p>If we've asked you to send proof to help us review your case, you should send this as soon as possible.</p>
-    <a href="url">Contact us if you have any further queries about your Penalty Charge Notice letter</a>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your entitlement (opens in a new window)</a>.</p>
+    <div></div>
+
+    <H2>Pay a Penalty Charge Notice</H2>
+    <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either:</p>
+    <ul>
+      <li>debit or credit card</li>
+      <li>Direct Debit</li>
+    </ul>
+
+    <a href="payment-method" class="nhsuk-button">
+      Pay
+    </a>
+
 
     </dl>
   </div>
