case closed page updated

--- a/app/views/v5-enquiry/adhoc-screens/case-closed.html
+++ b/app/views/v5-enquiry/adhoc-screens/case-closed.html
@@ -9,6 +9,8 @@ An exemption has been found
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
+    <h1>Your case has already been closed</h1>
+   
     
 
 
@@ -18,11 +20,9 @@ An exemption has been found
       <div class="nhsuk-card__content">
 
         <h1 class="nhsuk-panel__title nhsuk-heading-l" style="text-align: center; color: white;">
-          Your case has already been closed
+          You do not need to do anything <br> else.
         </h1>
-        <p class="nhsuk-panel__body" style="text-align: center; color: white;">
-          You do not need to do anything else.
-        </p>
+        
         
       </div>
     </div>
