updated link on deceased screen

--- a/app/views/v5-enquiry/deceased.html
+++ b/app/views/v5-enquiry/deceased.html
@@ -37,7 +37,7 @@ An exemption has been found
       <p>Reference number 01234567890</p>
     </div>
 
-    <p>There should be no further correspondence sent about this. <a href="">Contact us if you receive anything
+    <p>There should be no further correspondence sent about this. <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you receive anything
         further</a>.</p>
 
 
