--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -488,6 +488,15 @@ NHS.UK prototype kit
                             </strong></td>
                         </tr>
 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We could not verify your extra details</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/we-could-not-verify-your-details">We could not verify
+                                your details</a></td>
+                                <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                                BOTH
+                                </strong></td>
+                            </tr>
+
                     </tbody>
                 </table>
 
