Payment timeout page added

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -461,6 +461,12 @@ NHS.UK prototype kit
                             failed</a></td>
                         <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Payment timed out</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-has-timed-out">Payment error time out
+                                </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            </tr>
 
                         
                         <tr role="row" class="nhsuk-table__row">
