--- a/app/views/v6-pcn/gov-payment-confirmed-partial.html
+++ b/app/views/v6-pcn/gov-payment-confirmed-partial.html
@@ -57,6 +57,14 @@
               1 Test Road<br>Town<br>NE1 OLD
             </dd>
           </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Confirmation email
+            </dt>
+            <dd class="govuk-summary-list__value">
+              michelle.doe123@test.com
+            </dd>
+          </div>
         </dl>
 
         
