updated details still not found screen added

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -503,6 +503,14 @@ NHS.UK prototype kit
                                 </strong></td>
                             </tr>
 
+                            <tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell">We have tried to find your updated details</td>
+                                <td class="nhsuk-table__cell"><a href="v6-pcn/we-have-tried-to-find-your-updated-details">We still could not verify your updated details</a></td>
+                                    <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                                    BOTH
+                                    </strong></td>
+                                </tr>
+
                     </tbody>
                 </table>
 
