--- a/app/views/v5-enquiry/reviewing-case.html
+++ b/app/views/v5-enquiry/reviewing-case.html
@@ -29,7 +29,7 @@ We are now reviewing your case
 
       </div>
 
-      <p>No additional charges will be added during this time.</p>
+      <p>We will not add any extra charges during this time.</p>
       <p>You do not need to do anything until we contact you.</p>
 
 
