routing from partial payment made pages to payment method page

--- a/app/views/v6-pcn-decs/error-messages/payment-not-collected.html
+++ b/app/views/v6-pcn-decs/error-messages/payment-not-collected.html
@@ -18,7 +18,7 @@ Payment not collected
       <p>You can try to make a payment again.</p>
       <p>We recommend that you contact your bank for more details if this issue continues.</p>
 ​
-      <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+      <a href="/v6-pcn-decs/payment-method"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
         Try payment again
       </button>
 ​
