--- a/app/views/v6-pcn-decs/partial-payment-made-matex.html
+++ b/app/views/v6-pcn-decs/partial-payment-made-matex.html
@@ -83,7 +83,7 @@ Payment confirmation
 
       <p>You have until <strong>10 July 2023</strong> to get a maternity exemption certificate. To apply for a maternity exemption certificate, speak to your midwife, doctor or health visitor. They'll complete the application for you.</p>
       <p>If you are not eligible for a maternity exemption certificate you'll need to pay the remaining amount of <strong>£48.25</strong></p>
-      <a href="payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
+      <a href="payment-method"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
         Make another payment
       </button></a>
 
