--- a/app/views/v6-pcn-decs/partial-payment-made.html
+++ b/app/views/v6-pcn-decs/partial-payment-made.html
@@ -81,7 +81,7 @@ Payment confirmation
       <h3>Further payments</h3>
       <p>You can use this service to pay the remaining amount of <strong>£25</strong>.</p>
 
-      <a href="payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
+      <a href="payment-method"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
         Make another payment
       </button></a>
 
