--- a/app/views/v6-pcn/error-messages/payment-has-been-cancelled.html
+++ b/app/views/v6-pcn/error-messages/payment-has-been-cancelled.html
@@ -23,7 +23,7 @@ You have cancelled your payment
       <p>You still need to pay:<br><b>£419.30</b></p>
     </div>
 
-    <a class="nhsuk-button" href="/v6-pcn/payment-choice" data-module="nhsuk-button" type="submit">
+    <a class="nhsuk-button" href="/v6-pcn/payment-method" data-module="nhsuk-button" type="submit">
       Try payment again
     </a>
 
