--- a/app/views/v6-pcn/error-messages/payment-not-authorised.html
+++ b/app/views/v6-pcn/error-messages/payment-not-authorised.html
@@ -18,7 +18,7 @@ Payment not authorised
       <p>You can try to make a payment again.</p>
       <p>We recommend that you contact your bank for more details if this issue continues.</p>
 ​
-      <a href="/v6-pcn/payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+      <a href="/v6-pcn/payment-method"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
         Try payment again
       </button>
 ​
