--- a/app/views/v6-pcn-decs/error-messages/payment-has-been-cancelled.html
+++ b/app/views/v6-pcn-decs/error-messages/payment-has-been-cancelled.html
@@ -23,9 +23,10 @@ You have cancelled your payment
       <p>You still need to pay:<br><b>£419.30</b></p>
     </div>
 
-    <a class="nhsuk-button" href="/v6-pcn/gov-pay" data-module="nhsuk-button" type="submit">
+    
+    <a href="/v6-pcn-decs/payment-method"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
       Try payment again
-    </a>
+    </button>
 
     <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us</a> if you want to pay over the phone or have any other questions.</p>
 
