--- a/app/views/v6-pcn-decs/partial-payment-made-medex.html
+++ b/app/views/v6-pcn-decs/partial-payment-made-medex.html
@@ -83,7 +83,7 @@ Payment confirmation
 
       <p>You have until <strong>10 July 2023</strong> to get a medical exemption certificate. To apply, speak to your doctor, they give you an application form.</p>
       <p>If you are not eligible for a medical exemption certificate you'll need to pay the remaining amount of <strong>£48.25</strong></p>
-      <a href="payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
+      <a href="payment-method"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
         Make another payment
       </button></a>
 
