--- a/app/views/v5-enquiry/adhoc-screens/case-closed.html
+++ b/app/views/v5-enquiry/adhoc-screens/case-closed.html
@@ -9,7 +9,7 @@ An exemption has been found
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <h1>Your case has already been closed</h1>
+    
    
     
 
@@ -20,7 +20,8 @@ An exemption has been found
       <div class="nhsuk-card__content">
 
         <h1 class="nhsuk-panel__title nhsuk-heading-l" style="text-align: center; color: white;">
-          You do not need to do anything <br> else.
+          Your case has already been closed<p></p>
+          <h2 class="nhsuk-panel__title nhsuk-heading-m" style="text-align: center; color: white;"> You do not need to do anything else.</h2> 
         </h1>
         
         
