surcharge screens added to adhoc section

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -609,19 +609,25 @@ NHS.UK prototype kit
                             hold</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
-                        
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Surcharge Notice on hold</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/surcharge-penalty-charge-on-hold">Surcharge details on
+                            hold</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-test">We found a hc3 cert higher</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-high-pcn">We found a hc3 cert higher</a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
                                 </strong></td>
                         </tr>
-
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower">We found a hc3 cert lower</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-pcn">We found a hc3 cert lower</a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
@@ -629,8 +635,35 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same">We found a hc3 cert same</a></td>
+                            <td class="nhsuk-table__cell">We found a HC3 certificate with same contribution amount</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-pcn">We found a hc3 cert same</a>
+                            </td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                                DECS
+                                </strong></td>
+                        </tr>
+                        
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-high-surcharge">We found a hc3 cert higher (surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                                DECS
+                                </strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge">We found a hc3 cert lower (surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                                DECS
+                                </strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-surcharge">We found a hc3 cert same (surcharge)</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
                                 </strong></td>
@@ -646,7 +679,7 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Surcharge Penalty Charge Notice</td>
+                            <td class="nhsuk-table__cell">Surcharge Notice details</td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn-decs/surcharge-penalty-charge-notice">Surcharge Penalty Charge Notice</a>
                             </td>
