medex additional pages

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -565,7 +565,7 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Case closed - Debt collection</td>
+                        <td class="nhsuk-table__cell">Case closed - Debt collection (Surcharge)</td>
                         <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-closed">Penalty Charge Notice has been closed</a></td>
                         <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
@@ -615,6 +615,20 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell"><a href="v6-pcn-decs/surcharge-penalty-charge-on-hold">Surcharge details on
                             hold</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Exemption certificate was not valid - Medex</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/no-medex-radio-expiry">Exemption certificate not valid at time you claimed
+                            </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We cannot find your details - Medex</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/cannot-find-details-medex">We cannot find your details (Medex)
+                            </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
