--- a/app/views/v6-pcn/penalty-charge-details-on-hold.html
+++ b/app/views/v6-pcn/penalty-charge-details-on-hold.html
@@ -20,16 +20,6 @@ Penalty Charge Notice details on hold
   }
 </style>
 
-<div class="nhsuk-back-link">
-  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-      aria-hidden="true" height="24" width="24">
-      <path
-        d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z">
-      </path>
-    </svg>
-    Go back</a>
-</div>
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
     <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
@@ -266,7 +256,7 @@ Penalty Charge Notice details on hold
           Date prescription was claimed
         </dt>
         <dd class="nhsuk-summary-list__value">
-         23 October 2022 and 31 October 2022
+         Between 23 October 2022 and 31 October 2022
         </dd>
 
       </div>
