matex/medex screens added to adhoc

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -625,8 +625,22 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Exemption certificate was not valid - Matex</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/no-matex-radio-expiry">Exemption certificate not valid at time you claimed
+                            </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We cannot find your details - Medex</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/cannot-find-details-medex">We cannot find your details (Medex)
+                            </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We cannot find your details - Matex</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/cannot-find-matex">We cannot find your details (Matex)
                             </a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
                         </tr>
