--- a/app/views/v6-pcn/cannot-find-matex.html
+++ b/app/views/v6-pcn/cannot-find-matex.html
@@ -32,9 +32,9 @@ You didn't have a valid medical exemption certificate
 
           <p>The information you have given us does not prove you were entitled to free NHS prescriptions between 01 March 2023 and 25 March 2023.</p>
 
-          <p>Although you did not have a valid medical exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
+          <p>Although you did not have a valid maternity exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
 
-          <p>You have until <strong>10 July 2023</strong> to get a medical exemption certificate.</p>
+          <p>You have until <strong>10 July 2023</strong> to get a maternity exemption certificate.</p>
           <P>If your application is successful, you'll only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
         
 
@@ -52,7 +52,7 @@ You didn't have a valid medical exemption certificate
                 <div class="nhsuk-radios__item">
                     <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
                     <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                      Pay the original £9.65 prescription charge, and apply for a medical exemption certificate.
+                      Pay the original £9.65 prescription charge, and apply for a maternity exemption certificate.
                     </label>
                     
                 </div>
