routing for matex pages updated

--- a/app/views/v6-pcn/no-matex-radio-expiry.html
+++ b/app/views/v6-pcn/no-matex-radio-expiry.html
@@ -41,7 +41,7 @@ You didn't have a valid medical exemption certificate
 
 
   <h3>What do you want to do next?</h3>
-          <form action="medex-radios" method="get" class="form">
+          <form action="no-matex-radios" method="get" class="form">
 
             
             <div class="nhsuk-form-group">
