--- a/app/views/v6-pcn/cannot-find-matex.html
+++ b/app/views/v6-pcn/cannot-find-matex.html
@@ -43,7 +43,7 @@ You didn't have a valid medical exemption certificate
 
 
   <h3>What do you want to do next?</h3>
-          <form action="medex-radios" method="get" class="form">
+          <form action="matex-radios" method="get" class="form">
 
             
             <div class="nhsuk-form-group">
