--- a/app/views/v6-pcn/confirmation-page-dwp-not-uc.html
+++ b/app/views/v6-pcn/confirmation-page-dwp-not-uc.html
@@ -40,7 +40,7 @@ An exemption has been found
       
       <p><a href="">Print this page</a></p>
       
-      <h2>How to avoid a future enquiry letter</h2>
+      <h2>How to avoid a future Penalty Charge Notice</h2>
       <p>We match exemptions using a combination of your:</p>
       <ul>
         <li>name</li>
