PCN view pages content updated

--- a/app/views/v6-pcn/penalty-charge-details-on-hold.html
+++ b/app/views/v6-pcn/penalty-charge-details-on-hold.html
@@ -22,7 +22,7 @@ Penalty Charge Notice details on hold
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
+    <span class="nhsuk-caption-m">Your details</span>
     <h1>
       Penalty Charge Notice 01234567890
     </h1>
