--- a/app/views/v6-pcn/penalty-charge-notice-details-bsa.html
+++ b/app/views/v6-pcn/penalty-charge-notice-details-bsa.html
@@ -20,7 +20,7 @@ Penalty Charge Notice
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <span class="nhsuk-caption-m">Respond to your letter</span>
+    <span class="nhsuk-caption-m">Your details</span>
     <h1>
       Penalty Charge Notice 01234567890
     </h1>
@@ -92,7 +92,7 @@ Penalty Charge Notice
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total prescription charge
+              Prescription charges
             </dt>
             <dd class="nhsuk-summary-list__value">
               £9.65
