active DD page updated

--- a/app/views/v6-pcn/penalty-charge-details-DD-active.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-active.html
@@ -261,10 +261,9 @@ Penalty Charge Notice details on hold
       </div>
     </dl>
 
-    <p>You cannot do anything more to confirm entitlement online at the moment.</p>
-    <p>If we've asked you to send proof to help us review your case, you should send this as soon as possible.</p>
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your entitlement (opens in a new window)</a>.</p>
-    <div></div>
+    
+    
+   
 
     <H2>You have set up a Direct Debit to pay your Penalty Charge</H2>
     <p>You can no longer make a challenge online if you have</p>
@@ -273,12 +272,16 @@ Penalty Charge Notice details on hold
       <li>previously set up a Direct Debit.</li>
       <li>made full or partial payment by post, telephone or online.</li>
     </ul>
-
-    
-
-
-    </dl>
   </div>
+  <dl>
+
+  </dl>
+</div>
+<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new window)</a>.</p>
+
+</div>
+
+  
 
 
 <style>
